--- a/index.html
+++ b/index.html
@@ -8,10 +8,38 @@
   </head>
   <body>
     <header>
-      
+      <nav>
+        <a href="./index.html">Accueil</a>
+      </nav>
     </header>
     <main>
-      <p>Hello !</p>
+      <div class="form-group">
+        <label for="task-name">Nom de la tâche</label>
+        <input type="text" id="task-name" placeholder="Devoir, révision, etc." />
+      </div>
+  
+      <div class="form-group">
+        <label for="task-date">Date d'échéance</label>
+        <input type="date" id="task-date" />
+      </div>
+  
+      <div class="form-group">
+        <label for="task-time">Heure d'échéance</label>
+        <input type="time" id="task-time" />
+      </div>
+  
+      <div class="form-group">
+        <label for="task-priority">Priorité</label>
+        <select id="task-priority">
+          <option value="low">Faible</option>
+          <option value="medium">Moyenne</option>
+          <option value="high">Élevée</option>
+        </select>
+      </div>
+  
+      <button onclick="addTask()">Ajouter Tâche</button>
+  
+      <div class="task-list" id="task-list"></div>
     </main>
     <footer>
       
