--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset ="UTF-8">
     <meta name ="viewport" content="width=device-width, intial-scale=1.0">
-    <meta name="description" content="Bienvenue sur Tamir Manager 2025-2026 Edtion ! Si vous êtes de la 1071 de Sécheron, vous pouvez consulter rapidement votre agenda en ligne ! Parfait pour vérifier si votre agenda est correct.">
-    <title>Tamir Manager | 2025-2026 Edition</title>
+    <meta name="description" content="Bienvenue sur Tamir Agendas 2025-2026 Edtion ! Si vous êtes de la 1071 de Sécheron, vous pouvez consulter rapidement votre agenda en ligne ! Parfait pour vérifier si votre agenda est correct.">
+    <title>Tamir Agendas | 2025-2026 Edition</title>
   </head>
   <body>
     <header>
@@ -13,33 +13,7 @@
       </nav>
     </header>
     <main>
-      <div class="form-group">
-        <label for="task-name">Nom de la tâche</label>
-        <input type="text" id="task-name" placeholder="Devoir, révision, etc." />
-      </div>
-  
-      <div class="form-group">
-        <label for="task-date">Date d'échéance</label>
-        <input type="date" id="task-date" />
-      </div>
-  
-      <div class="form-group">
-        <label for="task-time">Heure d'échéance</label>
-        <input type="time" id="task-time" />
-      </div>
-  
-      <div class="form-group">
-        <label for="task-priority">Priorité</label>
-        <select id="task-priority">
-          <option value="low">Faible</option>
-          <option value="medium">Moyenne</option>
-          <option value="high">Élevée</option>
-        </select>
-      </div>
-  
-      <button onclick="addTask()">Ajouter Tâche</button>
-  
-      <div class="task-list" id="task-list"></div>
+
     </main>
     <footer>
       
