--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <header>
       <nav>
         <a href="./index.html">Accueil</a>
+        <a href="./archives/archives.html">Archives</a>
       </nav>
     </header>
     <main>
