--- a/index.html
+++ b/index.html
@@ -4,20 +4,21 @@
     <meta charset ="UTF-8">
     <meta name ="viewport" content="width=device-width, intial-scale=1.0">
     <meta name="description" content="Bienvenue sur Tamir Agendas 2025-2026 Edtion ! Si vous êtes de la 1071 de Sécheron, vous pouvez consulter rapidement votre agenda en ligne ! Parfait pour vérifier si votre agenda est correct.">
+    <link href="./styles/styles.css" rel="stylesheet">
     <title>Tamir Agendas | 2025-2026 Edition</title>
   </head>
   <body>
     <header>
       <nav>
-        <a href="https://thesilenthack.github.io/Tamir-Agendas-2025-2026-Edition/index.html">Accueil</a>
-        <a href="https://thesilenthack.github.io/Tamir-Agendas-2025-2026-Edition/archives/archives.html">Archives</a>
+        <a href="./index.html">Accueil</a>
+        <a href="./eel.html">EEL</a>
+        <a href="./archives.html">Archives</a>
       </nav>
     </header>
     <main>
-
+      <h2>Accueil</h2>
+      <h3>Lundi 15 Septembre 2025</h3>
+      <p><strong>P2 Allemand : </strong>Terminer le questionnaire "Extras Épisode 1" + réviser exercice 7 "Se présenter" du dossier + Terminer le questionnaire Freunde ex. AB ...</p>
     </main>
-    <footer>
-      
-    </footer>
   </body>
 </html>
