--- a/archives.html
+++ b/archives.html
@@ -4,20 +4,19 @@
     <meta charset ="UTF-8">
     <meta name ="viewport" content="width=device-width, intial-scale=1.0">
     <meta name="description" content="Bienvenue sur Tamir Agendas 2025-2026 Edtion ! Si vous êtes de la 1071 de Sécheron, vous pouvez consulter rapidement votre agenda en ligne ! Parfait pour vérifier si votre agenda est correct.">
+    <link href="./styles/styles.css" rel="stylesheet">
     <title>Tamir Agendas | 2025-2026 Edition</title>
   </head>
   <body>
     <header>
       <nav>
-        <a href="https://thesilenthack.github.io/Tamir-Agendas-2025-2026-Edition/index.html">Accueil</a>
-        <a href="https://thesilenthack.github.io/Tamir-Agendas-2025-2026-Edition/archives/archives.html">Archives</a>
+        <a href="./index.html">Accueil</a>
+        <a href="./eel.html">EEL</a>
+        <a href="./archives.html">Archives</a>
       </nav>
     </header>
     <main>
-      <p>Archives</p>
+      <h2>Archives</h2>
     </main>
-    <footer>
-      
-    </footer>
   </body>
 </html>
