--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@
       <h2>Accueil</h2>
       <h3>Lundi 15 Septembre 2025</h3>
       <p><strong>P2 Allemand : </strong>Terminer le questionnaire "Extras Épisode 1" + réviser exercice 7 "Se présenter" du dossier + Terminer le questionnaire Freunde ex. AB ...</p>
+      <!--<div class="btnNextWeekDiv">
+        <button id="btnNextWeek">
+          <p>⤓ Semaine prochaine</p>
+        </button>
+      </div>-->
     </main>
   </body>
 </html>
