--- a/eel.html
+++ b/eel.html
@@ -18,7 +18,7 @@
     <main>
       <h2>EEL</h2>
       <h3>École en ligne</h3>
-      <iframe src="https://eduge.ch">iframe contenant https://eduge.ch</iframe>
+      <iframe src="https://eduge.ch" width="90%" height="90%" target="_self">iframe contenant https://eduge.ch</iframe>
     </main>
   </body>
 </html>
