--- a/index.html
+++ b/index.html
@@ -24,6 +24,12 @@
           <p>⤓ Semaine prochaine</p>
         </button>
       </div>-->
+      <p id="windowHeight"></p>
+      <p id="windowWidth"></p>
     </main>
+    <script>
+      getElementById("windowHeight").innerHTML = "Hauteur : " + window.innerHeight;
+      getElementById("windowWidth").innerHTML = "Hauteur : " + window.innerWidth;
+    </script>
   </body>
 </html>
