--- a/eel.html
+++ b/eel.html
@@ -18,7 +18,26 @@
     <main>
       <h2>EEL</h2>
       <h3>École en ligne</h3>
-      <iframe src="https://eduge.ch" width="90%" height="90%" target="_self">iframe contenant https://eduge.ch</iframe>
+      <h4>Google Mail</h4>
+      <div style="width:100%; height:100vh;">
+        <iframe src="https://ssoeel.geneveid.ch/ginasso/XUI/?realm=/&spEntityID=google.com/a/eduge.ch&service=eelService&goto=https://ssoeel.geneveid.ch:443/ginasso/saml2/continue/metaAlias/idp2?secondVisitUrl%3D/ginasso/SSORedirect/metaAlias/idp2?ReqID%253Ddbecbkmpckcncclppafpnckleagenomfjajgcjah&ETATSSOAUTH_EELPROD=#login/" style="width:90%; height:90%; border:none; display:block; margin:auto;">
+        </iframe>
+      </div>
+      <h4>Google Classroom</h4>
+      <div style="width:100%; height:100vh;">
+        <iframe src="" style="width:90%; height:90%; border:none; display:block; margin:auto;">
+        </iframe>
+      </div>
+      <h4>Google Drive</h4>
+      <div style="width:100%; height:100vh;">
+        <iframe src="https://ssoeel.geneveid.ch/ginasso/XUI/?realm=/&spEntityID=google.com/a/eduge.ch&service=eelService&goto=https://ssoeel.geneveid.ch:443/ginasso/saml2/continue/metaAlias/idp2?secondVisitUrl%3D/ginasso/SSORedirect/metaAlias/idp2?ReqID%253Dmcnbmlfchibpekdhfbficeffpjfldijjaejpjplj&ETATSSOAUTH_EELPROD=#login/" style="width:90%; height:90%; border:none; display:block; margin:auto;">
+        </iframe>
+      </div>
+      <h4>Cortex</h4>
+      <div style="width:100%; height:100vh;">
+        <iframe src="https://cortex.eduge.ch" style="width:90%; height:90%; border:none; display:block; margin:auto;">
+        </iframe>
+      </div>
     </main>
   </body>
 </html>
