--- a/archives.html
+++ b/archives.html
@@ -10,6 +10,7 @@
   <body>
     <header>
       <nav>
+        <h1>Tamir Agendas | 2025-2026</h1>
         <a href="./index.html">Accueil</a>
         <a href="./eel.html">EEL</a>
         <a href="./archives.html">Archives</a>
