--- a/index.html
+++ b/index.html
@@ -25,8 +25,10 @@
           <p>⤓ Semaine prochaine</p>
         </button>
       </div>-->
-      <p id="windowHeight"></p>
-      <p id="windowWidth"></p>
+      <div class="windowDimensions">
+        <p id="windowHeight"></p>
+        <p id="windowWidth"></p>
+      </div>
     </main>
     <script>
       function updateSize() {
